--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -124,3 +124,11 @@ html {
   border-radius: 15%;
   object-fit: cover;
 }
+
+.img-medium {
+  width: 400px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
