--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -17,7 +17,7 @@
 
         <p>Before I started working, I was a <a href="https://provost.utdallas.edu/mcdermott-scholars">McDermott Scholar</a> at the <a href="https://utdallas.edu">University of Texas at Dallas</a>.</p>
 
-        <p>When I'm not coding, you can find me whacking tennis balls, painting cardboard boxes, and staring at chess puzzles.</p>
+        <p>When I'm not coding, you can find me whacking tennis balls, painting cardboard boxes, and trying out video games.</p>
       </section>
 
       <section id="posts" class="inner">
