Fix typo linking to all blog posts in home page

--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -35,7 +35,7 @@
           {%- endfor -%}
         </ul>
         <div class="all-blog-posts-link">
-          <a href="/blog/">...</a>
+          <a href="/blog">...</a>
         </div>
       </section>
       
