Fix style to fix code block background and max images 100% of width of parent div

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -136,3 +136,11 @@ html {
 .all-blog-posts-link {
   font-size: 30px;
 }
+
+.highlight {
+  background-color: white;
+}
+
+p img {
+  width: 100%;
+}
